# osu-micro-benchmarks

./: Makefile.in  README  configure  configure.ac
mpi/: Makefile.am  Makefile.in
mpi/app/: Makefile.am  Makefile.in  osu_linear_system_jacobi.c  osu_matrix_mult.c
mpi/collective/: Makefile.in
mpi/one-sided/: Makefile.in
mpi/pt2pt/: Makefile.in
util/: osu_util.c  osu_util.h
